# mvp-vision-ai-platform

./: .dockerignore  .env.example  .env.mvp.example  .env.r2.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  CUsersflytoProjectGithubmvp-vision-ai-platformpostgresql_full_log.txt  DEV_SCRIPTS.md  DOCUMENTATION_MAP.md  MVP_STRUCTURE.md  Makefile  Makefile.mvp  PROJECT_SETUP.md  README.md  check-keycloak-config.md  dev-start.ps1  dev-status.ps1  dev-stop.ps1  dev-train-k8s.ps1  dev-train-local.ps1  docker-compose.dev.yml  docker-compose.yml
platform/backend/: .dockerignore  .env.example  .env.production.example  Dockerfile  PHASE1_2_IMPLEMENTATION.md  README.md  add_clearml_column.py  add_snapshot_metadata_fields.py  admin_token.txt  analyze_dataset_usage.py  check_datasets.py  check_minio.py  check_multiple_jobs.py  check_r2_datasets.py  clearml.conf  create_admin.py  debug_jwt_token.py  debug_live_request.py  init_db.py  manual_migrate.py  migrate_add_workflow_id.py  pyproject.toml  pytest.ini  quick_test.py  register_r2_dataset.py  requirements.txt  start.sh  test_token.txt  users.db-shm  users.db-wal  verify_labeler_jwt.py
platform/backend/app/: config.py  main.py  main_with_monitoring.py
platform/backend/app/adapters/observability/: __init__.py  base.py  clearml_adapter.py  database_adapter.py  mlflow_adapter.py
platform/backend/app/api/: admin.py  auth.py  chat.py  datasets.py  datasets_folder.py  datasets_images.py  debug.py  experiments.py  export.py  image_tools.py  inference.py  invitations.py  models.py  projects.py  test_inference.py  training.py  validation.py  websocket.py
platform/backend/app/auth/: __init__.py  dependencies.py  jwt.py  password.py
platform/backend/app/clients/: __init__.py  labeler_client.py
platform/backend/app/core/: config.py  keycloak_auth.py  security.py  service_jwt.py  temporal_client.py  training_manager.py
platform/backend/app/core/training_managers/: __init__.py  kubernetes_manager.py  subprocess_manager.py
platform/backend/app/db/: database.py  models.py
platform/backend/app/models/: conversation.py
platform/backend/app/schemas/: auth.py  chat.py  configs.py  dataset.py  enums.py  experiment.py  export.py  inference.py  invitation.py  projects.py  test_inference.py  training.py  training_config_schemas.json  user.py
platform/backend/app/services/: action_handlers.py  clearml_service.py  dataset_analyzer.py  email_service.py  mlflow_service.py  observability_manager.py  redis_manager.py  redis_session_store.py  snapshot_service.py  training_callback_service.py  training_monitor.py  vm_controller.py  websocket_manager.py
platform/backend/app/utils/: README_DUAL_STORAGE.md  dependencies.py  dual_storage.py  inference_engine.py  llm.py  llm_structured.py  metrics.py  mlflow_client.py  s3_storage.py  split_resolver.py  storage_utils.py  tool_registry.py  training_manager.py  training_manager_k8s.py  training_subprocess.py
platform/backend/app/workflows/: __init__.py  training_workflow.py  worker.py
platform/backend/docs/: E2E_TEST_RESULTS.md  NEW_PERMISSION_SYSTEM.md  PERMISSIONS_GUIDE.md
platform/backend/migrations/: README.md  migrate_add_adapter_fields.py  migrate_add_advanced_config.py  migrate_add_badge_color.py  migrate_add_checkpoint_path.py  migrate_add_conversation_state.py  migrate_add_custom_docker_image.py  migrate_add_dataset_id_postgresql.py  migrate_add_dataset_split_config.py  migrate_add_experiments.py  migrate_add_export_deployment_tables.py  migrate_add_invitations.py  migrate_add_last_checkpoint.py  migrate_add_organizations_and_roles.py  migrate_add_password_reset.py  migrate_add_primary_metric.py  migrate_add_user_auth.py  migrate_dataset_versioning.py  migrate_existing_sessions.py  migrate_fix_light_colors.py  migrate_image_path_nullable.py  migrate_logs_to_loki.py  migrate_remove_snapshot_user_fk.py
platform/backend/sample_datasets/seg-coco8/labels/: train.cache  val.cache
platform/backend/scripts/: README.md  init_clearml.py  setup_clearml_credentials.py
platform/backend/scripts/check/: check_admin.py  check_checkpoint_columns.py
platform/backend/scripts/convert/: convert_yolo_seg_to_platform.py
platform/backend/scripts/phase11/: cleanup_platform_db_user_tables.py  init_shared_user_db.py  migrate_sqlite_to_postgresql.py
platform/backend/scripts/setup/: init_db.py
platform/backend/test_dataset/labels/train/: image_0.txt  image_1.txt  (+3 more)
platform/backend/tests/: README.md  TEST_COVERAGE_PLAN.md  conftest.py  run_scenario.py
platform/backend/tests/_archived/: README.md
platform/backend/tests/e2e/: test_api_schema_consistency_e2e.py  test_inference_e2e.py  test_inference_e2e.sh
platform/backend/tests/integration/: test_api_response.py  test_dual_storage.py  test_endpoint.py  test_inference_api.py  test_inference_pretrained.py  test_model_loading.py  test_models_api.py  test_organization_registration.py  test_pretrained_loading.py  test_training_config.py  test_training_execution.py  test_upload.py  test_validation_metrics_persistence.py
platform/backend/tests/scenarios/: yolo_detection_mvtec.json
platform/backend/tests/unit/: test_redis_manager.py
platform/trainers/huggingface/: Dockerfile  capabilities.json  export.py  pyproject.toml  train.py  trainer_sdk.py
platform/trainers/mmseg/: Dockerfile  capabilities.json  default_config.py  pyproject.toml  train.py
platform/trainers/openmm/: .env.example  Dockerfile  README.md  capabilities.json  config_schema.py  evaluate.py  export.py  predict.py  pyproject.toml  requirements.txt  train.py  utils.py
platform/trainers/ultralytics/: .env.example  Dockerfile  EXPORT_GUIDE.md  README.md  capabilities.json  config_schema.py  evaluate.py  export.py  predict.py  pyproject.toml  requirements.txt  train.py  trainer_sdk.py  utils.py  validate_capabilities.py
platform/training-services/ultralytics/: .env.example  README.md  pyproject.toml  requirements.txt
platform/training-services/ultralytics/app/: __init__.py  __main__.py  config.py  main.py  schemas.py
platform/training-services/ultralytics/k8s/: job-example.yaml
(+980 files in other folders)
