[project]
name = "huggingface-trainer"
version = "1.0.0"
description = "HuggingFace Transformers Training Service for Vision AI Platform"
readme = "README.md"
requires-python = ">=3.10,<3.12"

dependencies = [
    # Core Training Framework
    "transformers>=4.36.0",
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "datasets>=2.16.0",
    "accelerate>=0.25.0",

    # Storage
    "boto3>=1.34.14",
    "aioboto3>=12.3.0",

    # HTTP Callbacks
    "httpx>=0.26.0",
    "tenacity>=8.2.3",

    # MLflow Integration
    "mlflow>=2.9.2",

    # Data Processing
    "pyyaml>=6.0.1",
    "opencv-python-headless>=4.9.0.80",
    "pillow>=10.0.0",

    # Utilities
    "python-dotenv>=1.0.0",
    "numpy<2.0",
    "scikit-learn>=1.3.0",
    "scipy>=1.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
]

export = [
    # ONNX export
    "onnx>=1.14.0",
    "onnxruntime>=1.15.0",
    "optimum>=1.16.0",
]

[tool.black]
line-length = 100
target-version = ["py310", "py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
