[project]
name = "mmseg-trainer"
version = "1.0.0"
description = "MMSegmentation Training Service for Vision AI Platform"
readme = "README.md"
requires-python = ">=3.8,<3.12"

dependencies = [
    # OpenMMLab Core
    "openmim>=0.3.9",
    "mmengine>=0.10.0",
    "mmcv>=2.0.0,<2.2.0",
    "mmsegmentation>=1.2.0",

    # PyTorch
    "torch>=2.0.0",
    "torchvision>=0.15.0",

    # Storage
    "boto3>=1.34.14",

    # HTTP Callbacks
    "httpx>=0.26.0",
    "tenacity>=8.2.3",

    # Data Processing
    "pyyaml>=6.0.1",
    "opencv-python-headless>=4.9.0.80",
    "numpy>=1.24.0",
    "Pillow>=10.0.0",
    "scipy>=1.10.0",

    # Utilities
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
]

export = [
    "onnx>=1.14.0",
    "onnxruntime>=1.15.0",
]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
