[tool.poetry]
name = "openmm-trainer"
version = "1.0.0"
description = "OpenMMLab trainer for Vision AI Platform"
authors = ["Vision AI Platform Team"]

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.0.0"
torchvision = "^0.15.0"
mmcv = "^2.0.0"
mmdet = "^3.0.0"
mmsegmentation = "^1.0.0"
mmpose = "^1.0.0"
httpx = "^0.24.0"
boto3 = "^1.26.0"
PyYAML = "^6.0"
Pillow = "^10.0.0"
opencv-python = "^4.8.0"
clearml = {version = "^1.14.0", optional = true}

[tool.poetry.extras]
clearml = ["clearml"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
