[project]
name = "ultralytics-trainer"
version = "1.0.0"
description = "Ultralytics YOLO Training Service for Vision AI Platform"
readme = "README.md"
requires-python = ">=3.10,<3.12"

dependencies = [
    # Core Training Framework
    "ultralytics>=8.1.0",
    "torch>=2.1.0",
    "torchvision>=0.16.0",

    # Storage
    "boto3>=1.34.14",
    "aioboto3>=12.3.0",

    # HTTP Callbacks
    "httpx>=0.26.0",
    "tenacity>=8.2.3",

    # MLflow Integration
    "mlflow>=2.9.2",

    # Data Processing
    "pyyaml>=6.0.1",
    "opencv-python-headless>=4.9.0.80",

    # Utilities
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
]

export = [
    # ONNX export
    "onnx>=1.14.0",
    "onnxruntime>=1.15.0",
    # TensorRT (optional, NVIDIA GPU only)
    # tensorrt>=8.6.0
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
# Use .venv directory for virtual environment
venv = ".venv"

[tool.uv.pip]
# PyTorch index for CUDA support (adjust based on your CUDA version)
# For CPU-only: use default PyPI
# For CUDA 11.8: https://download.pytorch.org/whl/cu118
# For CUDA 12.1: https://download.pytorch.org/whl/cu121
index-url = "https://pypi.org/simple"
extra-index-url = [
    "https://download.pytorch.org/whl/cpu",
]

[tool.black]
line-length = 100
target-version = ["py310", "py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
